# clickup-to-jira

./: .cz.toml  .editorconfig  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .releaserc  .secrets.baseline  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  package.json  pyproject.toml  requirements-docs.txt  requirements-tests.txt  requirements.txt  setup.cfg  setup.py
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/actions/release_notes_from_changelog/: Dockerfile  action.yml  main.py
.github/workflows/: bump.yml  ci.yml  docs.yml  main.yml  pr.yml  precommit.yml  release.yml  tag.yml  test.yml
.pre-commit/: .isort.cfg  .secrets.baseline  setup.cfg
clickup_to_jira/: comment.py  converter.py  delete_jira.py  migrate.py  ticket.py  utils.py
clickup_to_jira/handlers/: __init__.py  clickup.py  jira.py
clickup_to_jira/scripts/: migrate.py
docs/: Makefile  conf.py  index.rst  source.rst
src/clickup_to_jira/: converter.py
src/clickup_to_jira/handlers/: clickup.py  jira.py
src/clickup_to_jira/scripts/: migrate.py
tests/: test_converter.py  test_utils.py
tests/handlers/: test_clickup.py  test_jira.py
tests/scripts/: test_migrate.py
